# prism

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
addon/: addon.py
cmake/: AddPlatformExecutable.cmake  BuildShaders.cmake  Common.cmake  FindLuaJIT.cmake  FindSDL2.cmake  Findassimp.cmake
data/: font.fp
data/materials/: Material.material
data/models/: arrow.model  cube.model  plane.model  sphere.model
engine/: CMakeLists.txt
engine/asset/: CMakeLists.txt
engine/asset/include/: asset.hpp  asset_types.hpp  assetptr.hpp  material_nodes.hpp
engine/asset/src/: asset.cpp
engine/audio/: CMakeLists.txt
engine/audio/include/: audio.hpp
engine/audio/src/: audio.cpp
engine/core/: CMakeLists.txt
engine/core/include/: app.hpp  components.hpp  console.hpp  cutscene.hpp  debug.hpp  engine.hpp  file.hpp  frustum.hpp  imgui_backend.hpp  imgui_utility.hpp  imguilayer.hpp  input.hpp  object.hpp  physics.hpp  platform.hpp  scene.hpp  screen.hpp  uielement.hpp
engine/core/src/: console.cpp  debug.cpp  engine.cpp  file.cpp  imgui_backend.cpp  imguilayer.cpp  input.cpp  physics.cpp  scene.cpp  screen.cpp
engine/gfx/: CMakeLists.txt
engine/gfx/dummy/: CMakeLists.txt
engine/gfx/dummy/include/: gfx_dummy.hpp
engine/gfx/dummy/src/: gfx_dummy.cpp
engine/gfx/metal/: CMakeLists.txt
engine/gfx/metal/include/: gfx_metal.hpp
engine/gfx/metal/src/: gfx_metal.mm  gfx_metal_buffer.hpp  gfx_metal_framebuffer.hpp  gfx_metal_pipeline.hpp  gfx_metal_renderpass.hpp  gfx_metal_sampler.hpp  gfx_metal_texture.hpp
engine/gfx/public/: gfx.hpp  gfx_buffer.hpp  gfx_commandbuffer.hpp  gfx_framebuffer.hpp  gfx_object.hpp  gfx_pipeline.hpp  gfx_renderpass.hpp  gfx_sampler.hpp  gfx_texture.hpp
engine/gfx/vulkan/: CMakeLists.txt
engine/gfx/vulkan/include/: gfx_vulkan.hpp  gfx_vulkan_constants.hpp
engine/gfx/vulkan/src/: gfx_vulkan.cpp  gfx_vulkan_buffer.hpp  gfx_vulkan_commandbuffer.hpp  gfx_vulkan_framebuffer.hpp  gfx_vulkan_pipeline.hpp  gfx_vulkan_renderpass.hpp  gfx_vulkan_sampler.hpp  gfx_vulkan_texture.hpp
engine/log/: CMakeLists.txt
engine/log/include/: log.hpp
engine/log/src/: log.cpp
engine/math/: CMakeLists.txt
engine/math/include/: aabb.hpp  math.hpp  matrix.hpp  plane.hpp  quaternion.hpp  ray.hpp  transform.hpp  vector.hpp
engine/math/src/: math.cpp  transform.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/: file.hpp  platform.hpp
engine/renderer/: CMakeLists.txt
engine/renderer/include/: DirStackIncluder.h  dofpass.hpp  font.hpp  frustum.hpp  gaussianhelper.hpp  imguipass.hpp  materialcompiler.hpp  pass.hpp  render_options.hpp  renderer.hpp  rendertarget.hpp  scenecapture.hpp  shadercompiler.hpp  shadowpass.hpp  smaapass.hpp
engine/renderer/src/: dofpass.cpp  frustum.cpp  gaussianhelper.cpp  imguipass.cpp  materialcompiler.cpp  renderer.cpp  scenecapture.cpp  shadercompiler.cpp  shadowpass.cpp  smaapass.cpp
engine/shadercompiler/: CMakeLists.txt
engine/shadercompiler/include/: shadercompiler.hpp
engine/shadercompiler/src/: defaultresources.hpp  includer.hpp  shadercompiler.cpp
engine/shaders/: PrismEditoroptions.json  billboard.frag.glsl  blend.frag.glsl  blend.vert.glsl  brdf.frag.glsl  debug.vert.glsl  dof.frag.glsl  dof.vert.glsl  edge.vert.glsl  font.glsl  gaussian.frag.glsl  gaussian.vert.glsl  imgui.ini  imgui.vert.glsl  irradiance.frag.glsl  irradiance.vert.glsl  omnishadow.frag.glsl  post.vert.glsl  scenecapture.vert.nocompile.glsl  shadow.frag.glsl  shadow.vert.nocompile.glsl  sky.vert.glsl  text.frag.glsl  text.vert.glsl  ui.vert.glsl
engine/tests/: CMakeLists.txt  string_tests.cpp  tests.cpp  utility_tests.cpp
engine/utility/: CMakeLists.txt
engine/utility/include/: aabb.hpp  assertions.hpp  common.hpp  file_utils.hpp  json_conversions.hpp  path.hpp  string_utils.hpp  timer.hpp  utility.hpp
engine/utility/src/: string_utils.cpp
engine/vr/: CMakeLists.txt
engine/vr/openxr/: CMakeLists.txt
engine/vr/openxr/include/: openxr.hpp
engine/vr/openxr/src/: openxr.cpp
engine/vr/public/: vr.hpp
example/: CMakeLists.txt
example/include/: example.hpp
example/src/: example.cpp
shaders/: atmosphere.glsl  billboard.frag.glsl  billboard.vert.glsl  brdf.frag.glsl  brdf.vert.glsl  color.frag.glsl  common.nocompile.glsl  debug.frag.glsl  dof.frag.glsl  dof.vert.glsl  edge.frag.glsl  filter.frag.glsl  filter.vert.glsl  histogram-average.comp.glsl  histogram.comp.glsl  imgui.frag.glsl  irradiance.vert.glsl  mesh.vert.nocompile.glsl  omnishadow.frag.glsl  post.frag.glsl  post.vert.glsl  rendering.nocompile.glsl  shadow.vert.nocompile.glsl  sky.frag.glsl  sky.vert.glsl  smaa_common.glsl  ui.frag.glsl
tools/: CMakeLists.txt
tools/common/: CMakeLists.txt
tools/common/include/: commoneditor.hpp  debugpass.hpp  undostack.hpp
tools/common/src/: commoneditor.cpp  debugpass.cpp  undostack.cpp
tools/cutsceneeditor/: CMakeLists.txt
tools/cutsceneeditor/include/: cutsceneeditor.hpp
tools/cutsceneeditor/src/: cutsceneeditor.cpp
tools/editor/: CMakeLists.txt
tools/editor/include/: materialeditor.hpp  prefabeditor.hpp  prismeditor.hpp  sceneeditor.hpp  uieditor.hpp
tools/editor/src/: materialeditor.cpp  prefabeditor.cpp  prismeditor.cpp  sceneeditor.cpp  uieditor.cpp
tools/fontcompiler/: CMakeLists.txt  main.cpp
tools/modelcompiler/: CMakeLists.txt  main.cpp
tools/modelcompiler/include/: modeleditor.hpp
tools/modelcompiler/src/: modeleditor.cpp
tools/shadercompiler/: CMakeLists.txt  DirStackIncluder.h  main.cpp
