set(SRC
    include/renderer.hpp
    include/font.hpp
    include/pass.hpp
    include/gaussianhelper.hpp
    include/shadowpass.hpp
    include/imguipass.hpp
    include/smaapass.hpp
    include/scenecapture.hpp
    include/materialcompiler.hpp
    include/dofpass.hpp
    include/frustum.hpp
    include/render_options.hpp

    src/renderer.cpp
    src/gaussianhelper.cpp
    src/shadowpass.cpp
    src/imguipass.cpp
    src/smaapass.cpp
    src/scenecapture.cpp
    src/materialcompiler.cpp
    src/dofpass.cpp
    src/frustum.cpp)

add_library(Renderer STATIC ${SRC})
target_link_libraries(Renderer
    PUBLIC
    GFX
    Math
    PRIVATE
    stb
    Math
    Utility
    imgui
    SMAA::SMAA
    ShaderCompiler
    Core)
target_include_directories(Renderer PUBLIC include)
set_engine_properties(Renderer)

include(../../cmake/BuildShaders.cmake)

add_shader(TARGET Renderer
    SHADERS
    shaders/mesh.vert.nocompile.glsl
    shaders/post.vert.glsl
    shaders/post.frag.glsl
    shaders/text.vert.glsl
    shaders/text.frag.glsl
    shaders/ui.vert.glsl
    shaders/ui.frag.glsl
    shaders/imgui.vert.glsl
    shaders/imgui.frag.glsl
    shaders/debug.vert.glsl
    shaders/debug.frag.glsl
    shaders/gaussian.vert.glsl
    shaders/gaussian.frag.glsl
    shaders/shadow.vert.nocompile.glsl
    shaders/shadow.frag.glsl
    shaders/color.vert.glsl
    shaders/color.frag.glsl
    shaders/omnishadow.frag.glsl
    shaders/edge.vert.glsl
    shaders/edge.frag.glsl
    shaders/blend.vert.glsl
    shaders/blend.frag.glsl
    shaders/sky.vert.glsl
    shaders/sky.frag.glsl
    shaders/billboard.vert.glsl
    shaders/billboard.frag.glsl
    shaders/scenecapture.vert.nocompile.glsl
    shaders/irradiance.vert.glsl
    shaders/irradiance.frag.glsl
    shaders/filter.vert.glsl
    shaders/filter.frag.glsl
    shaders/brdf.vert.glsl
    shaders/brdf.frag.glsl
    shaders/rendering.nocompile.glsl
    shaders/common.nocompile.glsl
    shaders/dof.vert.glsl
    shaders/dof.frag.glsl)
